--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -1,14 +1,20 @@
 build:
   maxIssues: 0
 
+naming:
+  FunctionNaming:
+    active: true
+    excludes: 
+      - "**/*Composable.kt"
+      - "**/*Activity.kt"
+      - "**/*Screen.kt"
+
 style:
   NewLineAtEndOfFile:
     active: true
   MaxLineLength:
     active: true
     maxLineLength: 120
-  MagicNumber:
-    active: true
 
 complexity:
   LongMethod:
