--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,17 @@
 [versions]
-activityComposeVersion = "1.7.2"
-agp = "8.9.1"
+activityComposeVersion = "1.10.1"
+agp = "8.9.2"
+androidxJunit = "1.2.1"
 appcompat = "1.7.0"
 converterGson = "2.9.0"
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2024.09.00"
+composeBom = "2025.04.01"
 material = "1.12.0"
 material3 = "1.3.2"
 retrofit = "2.11.0"
@@ -19,7 +20,6 @@ uiTooling = "1.8.0"
 uiToolingPreview = "1.8.0"
 
 [libraries]
-androidx-activity-compose-v172 = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
