changed exceptions handling for repository

--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -11,13 +11,14 @@ naming:
       - '**/*Field.kt'
       - '**/*Bubble.kt'
       - '**/*Bar.kt'
+      - '**/MessagesList.kt'
 
 style:
   MagicNumber:
-    excludeAnnotated: ["Composable"]
     active: true
     excludes: 
       - '**/ui/theme/*.kt'
+      - '**/ui/components/*.kt'
   NewLineAtEndOfFile:
     active: true
   MaxLineLength:
