--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,16 @@ name: Release
 
 on:
   workflow_dispatch:
+    paths:
+      -'client/**'
+      -'.github/workflows/release.yml'
 
 jobs:
   build-release:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: client
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
